samples/extauthz/.generated/ext-authz.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ext-authz
  name: ext-authz
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
    - name: grpc
      port: 9000
      targetPort: 9000
  selector:
    app: ext-authz
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ext-authz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ext-authz
  template:
    metadata:
      labels:
        app: ext-authz
        sidecar.istio.io/inject: 'false'
    spec:
      containers:
        - image: registry.istio.io/testing/ext-authz:latest
          imagePullPolicy: Always
          name: ext-authz
          ports:
            - containerPort: 8000
            - containerPort: 9000
---
